; ModuleID = '/home/carl/AnghaBench/qmk_firmware/quantum/extr_quantum.c_hex_to_keycode.c'
source_filename = "/home/carl/AnghaBench/qmk_firmware/quantum/extr_quantum.c_hex_to_keycode.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@KC_0 = common dso_local global i32 0, align 4
@KC_1 = common dso_local global i32 0, align 4
@KC_A = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define weak dso_local i32 @hex_to_keycode(i32 %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca i32, align 4
  store i32 %0, i32* %3, align 4
  %4 = load i32, i32* %3, align 4
  %5 = and i32 %4, 15
  store i32 %5, i32* %3, align 4
  %6 = load i32, i32* %3, align 4
  %7 = icmp eq i32 %6, 0
  br i1 %7, label %8, label %10

8:                                                ; preds = %1
  %9 = load i32, i32* @KC_0, align 4
  store i32 %9, i32* %2, align 4
  br label %23

10:                                               ; preds = %1
  %11 = load i32, i32* %3, align 4
  %12 = icmp slt i32 %11, 10
  br i1 %12, label %13, label %18

13:                                               ; preds = %10
  %14 = load i32, i32* @KC_1, align 4
  %15 = load i32, i32* %3, align 4
  %16 = sub nsw i32 %15, 1
  %17 = add nsw i32 %14, %16
  store i32 %17, i32* %2, align 4
  br label %23

18:                                               ; preds = %10
  %19 = load i32, i32* @KC_A, align 4
  %20 = load i32, i32* %3, align 4
  %21 = sub nsw i32 %20, 10
  %22 = add nsw i32 %19, %21
  store i32 %22, i32* %2, align 4
  br label %23

23:                                               ; preds = %18, %13, %8
  %24 = load i32, i32* %2, align 4
  ret i32 %24
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
